--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   path_drawing:
 
-  step_progress_indicator: ^0.2.5+8
+  timelines: any
 
   carousel_slider: ^2.0.0
   splashscreen: ^1.2.0
