--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   path_drawing:
 
-  timelines: any
+  timeline_widget: ^1.0.6
 
   carousel_slider: ^2.0.0
   splashscreen: ^1.2.0
