--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   path_drawing:
 
   timeline_widget: ^1.0.6
+  flutter_plugin_pdf_viewer: ^1.0.7
 
   carousel_slider: ^2.0.0
   splashscreen: ^1.2.0
@@ -51,7 +52,7 @@ dependencies:
   image_picker: ^0.6.6+5
   expansion_card: ^0.1.0
   curved_navigation_bar: ^0.3.0
-  path_provider: ^0.4.0
+  path_provider: ^1.6.27
   flutter:
     sdk: flutter
 
